feat: Cats and Intensity

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 
-    <div class="container">
-        <h1 id="question">Will you be my Valentine? 💕</h1>
+    <h1 id="question">Will you be my Valentine? 💖🐱💘</h1>
 
-        <div class="buttons">
-            <button id="yesBtn">Yes 💖</button>
-            <button id="noBtn">No 😈</button>
-        </div>
-    </div>
+    <button id="yesBtn">Yes 💖💗💕</button>
+
+    <button id="noBtn">
+        No 
+        <span class="cat-container"></span>
+    </button>
 
     <script src="script.js"></script>
 </body>
